--- a/nbs/00_forensicface.ipynb
+++ b/nbs/00_forensicface.ipynb
@@ -46,11 +46,15 @@
     "    \"A (forensic) face comparison tool\"\n",
     "\n",
     "    def __init__(\n",
-    "        self, model: str = \"sepaelv2\", det_size: int = 320, use_gpu: bool = True\n",
+    "        self,\n",
+    "        model: str = \"sepaelv2\",\n",
+    "        det_size: int = 320,\n",
+    "        use_gpu: bool = True,\n",
+    "        magface=False,\n",
     "    ):\n",
     "\n",
     "        self.det_size = (det_size, det_size)\n",
-    "\n",
+    "        self.magface = magface\n",
     "        # model_base_path = osp.join(osp.expanduser(\"~/.insightface/models\"), model)\n",
     "        # adaface_model_folder = osp.join(model_base_path, \"adaface\")\n",
     "        # det_path = osp.join(model_base_path, \"det_10g.onnx\")\n",
@@ -82,17 +86,18 @@
     "            else [\"CPUExecutionProvider\"],\n",
     "        )\n",
     "\n",
-    "        self.ort_mag = onnxruntime.InferenceSession(\n",
-    "            osp.join(\n",
-    "                osp.expanduser(\"~/.insightface/models\"),\n",
-    "                model,\n",
-    "                \"magface\",\n",
-    "                \"magface_iresnet100.onnx\",\n",
-    "            ),\n",
-    "            providers=[\"CUDAExecutionProvider\"]\n",
-    "            if use_gpu\n",
-    "            else [\"CPUExecutionProvider\"],\n",
-    "        )\n",
+    "        if self.magface:\n",
+    "            self.ort_mag = onnxruntime.InferenceSession(\n",
+    "                osp.join(\n",
+    "                    osp.expanduser(\"~/.insightface/models\"),\n",
+    "                    model,\n",
+    "                    \"magface\",\n",
+    "                    \"magface_iresnet100.onnx\",\n",
+    "                ),\n",
+    "                providers=[\"CUDAExecutionProvider\"]\n",
+    "                if use_gpu\n",
+    "                else [\"CPUExecutionProvider\"],\n",
+    "            )\n",
     "\n",
     "    def _to_input_ada(self, aligned_bgr_img):\n",
     "        _aligned_bgr_img = aligned_bgr_img.astype(np.float32)\n",
@@ -132,15 +137,19 @@
     "\n",
     "        - ipd: interpupillary distance\n",
     "\n",
+    "        - pitch, yaw, roll angles\n",
+    "\n",
     "        - normalized_embedding\n",
     "\n",
     "        - embedding_norm\n",
     "\n",
     "        - aligned_face: face after alignment using the keypoints as references for affine transform\n",
+    "\n",
+    "        - (optional) magface norm and magface features\n",
     "        \"\"\"\n",
-    "        if type(imgpath) == str: # image path passed as argument\n",
+    "        if type(imgpath) == str:  # image path passed as argument\n",
     "            bgr_img = cv2.imread(imgpath)\n",
-    "        else: #image array passed as argument\n",
+    "        else:  # image array passed as argument\n",
     "            bgr_img = imgpath.copy()\n",
     "        faces = self.detectmodel.get(bgr_img)\n",
     "        if len(faces) == 0:\n",
@@ -148,20 +157,16 @@
     "        idx, kps = self.get_most_central_face(bgr_img, faces)\n",
     "        gender = \"M\" if faces[idx].gender == 1 else \"F\"\n",
     "        age = faces[idx].age\n",
+    "        bbox = faces[idx].bbox.astype(\"int\")\n",
     "        pitch, yaw, roll = faces[idx].pose\n",
     "        bgr_aligned_face = face_align.norm_crop(bgr_img, kps)\n",
     "        ipd = np.linalg.norm(kps[0] - kps[1])\n",
     "        ada_inputs = {\n",
     "            self.ort_ada.get_inputs()[0].name: self._to_input_ada(bgr_aligned_face)\n",
     "        }\n",
-    "        mag_inputs = {\n",
-    "            self.ort_mag.get_inputs()[0].name: self._to_input_mag(bgr_aligned_face)\n",
-    "        }\n",
     "        normalized_embedding, norm = self.ort_ada.run(None, ada_inputs)\n",
-    "        mag_embedding = self.ort_mag.run(None, ada_inputs)[0][0]\n",
-    "        mag_norm = np.linalg.norm(mag_embedding)\n",
     "\n",
-    "        return {\n",
+    "        ret = {\n",
     "            \"keypoints\": kps,\n",
     "            \"ipd\": ipd,\n",
     "            \"gender\": gender,\n",
@@ -171,18 +176,31 @@
     "            \"roll\": roll,\n",
     "            \"embedding\": normalized_embedding.flatten() * norm.flatten()[0],\n",
     "            \"norm\": norm.flatten()[0],\n",
-    "            \"magface_embedding\": mag_embedding,\n",
-    "            \"magface_norm\": mag_norm,\n",
+    "            \"bbox\": bbox,\n",
     "            \"aligned_face\": cv2.cvtColor(bgr_aligned_face, cv2.COLOR_BGR2RGB),\n",
     "        }\n",
     "\n",
+    "        if self.magface:\n",
+    "            # mag_inputs = {self.ort_mag.get_inputs()[0].name: self._to_input_mag(bgr_aligned_face)}\n",
+    "            mag_embedding = self.ort_mag.run(None, ada_inputs)[0][0]\n",
+    "            mag_norm = np.linalg.norm(mag_embedding)\n",
+    "            ret = {\n",
+    "                **ret,\n",
+    "                **{\n",
+    "                    \"magface_embedding\": mag_embedding,\n",
+    "                    \"magface_norm\": mag_norm,\n",
+    "                },\n",
+    "            }\n",
+    "\n",
+    "        return ret\n",
+    "\n",
     "    def process_image(self, imgpath):\n",
     "        return self.process_image_single_face(imgpath)\n",
-    "        \n",
-    "    def process_image_multiple_faces(\n",
-    "        self, imgpath: str, # Path to image to be processed\n",
     "\n",
-    "    ):  \n",
+    "    def process_image_multiple_faces(\n",
+    "        self,\n",
+    "        imgpath: str,  # Path to image to be processed\n",
+    "    ):\n",
     "        \"\"\"\n",
     "        Process image and returns list of dicts with:\n",
     "\n",
@@ -190,15 +208,19 @@
     "\n",
     "        - ipd: interpupillary distance\n",
     "\n",
+    "        - pitch, yaw, roll angles\n",
+    "\n",
     "        - normalized_embedding\n",
     "\n",
     "        - embedding_norm\n",
     "\n",
     "        - aligned_face: face after alignment using the keypoints as references for affine transform\n",
+    "\n",
+    "        - (optional) magface norm and magface features\n",
     "        \"\"\"\n",
-    "        if type(imgpath) == str: # image path passed as argument\n",
+    "        if type(imgpath) == str:  # image path passed as argument\n",
     "            bgr_img = cv2.imread(imgpath)\n",
-    "        else: #image array passed as argument\n",
+    "        else:  # image array passed as argument\n",
     "            bgr_img = imgpath.copy()\n",
     "        faces = self.detectmodel.get(bgr_img)\n",
     "        if len(faces) == 0:\n",
@@ -207,7 +229,7 @@
     "        for face in faces:\n",
     "\n",
     "            kps = face.kps\n",
-    "            bbox = face.bbox.astype('int')\n",
+    "            bbox = face.bbox.astype(\"int\")\n",
     "            gender = \"M\" if face.gender == 1 else \"F\"\n",
     "            age = face.age\n",
     "            pitch, yaw, roll = face.pose\n",
@@ -216,30 +238,31 @@
     "            ada_inputs = {\n",
     "                self.ort_ada.get_inputs()[0].name: self._to_input_ada(bgr_aligned_face)\n",
     "            }\n",
-    "            #mag_inputs = {\n",
-    "            #    self.ort_mag.get_inputs()[0].name: self._to_input_mag(bgr_aligned_face)\n",
-    "            #}\n",
     "            normalized_embedding, norm = self.ort_ada.run(None, ada_inputs)\n",
-    "            #mag_embedding = self.ort_mag.run(None, ada_inputs)[0][0]\n",
-    "            #mag_norm = np.linalg.norm(mag_embedding)\n",
+    "            face_ret = {\n",
+    "                \"keypoints\": kps,\n",
+    "                \"ipd\": ipd,\n",
+    "                \"gender\": gender,\n",
+    "                \"age\": age,\n",
+    "                \"pitch\": pitch,\n",
+    "                \"yaw\": yaw,\n",
+    "                \"roll\": roll,\n",
+    "                \"embedding\": normalized_embedding.flatten() * norm.flatten()[0],\n",
+    "                \"norm\": norm.flatten()[0],\n",
+    "                \"bbox\": bbox,\n",
+    "                \"aligned_face\": cv2.cvtColor(bgr_aligned_face, cv2.COLOR_BGR2RGB),\n",
+    "            }\n",
     "\n",
-    "            ret.append(\n",
-    "                {\n",
-    "                    \"keypoints\": kps,\n",
-    "                    \"ipd\": ipd,\n",
-    "                    \"gender\": gender,\n",
-    "                    \"age\": age,\n",
-    "                    \"pitch\": pitch,\n",
-    "                    \"yaw\": yaw,\n",
-    "                    \"roll\": roll,\n",
-    "                    \"embedding\": normalized_embedding.flatten() * norm.flatten()[0],\n",
-    "                    \"norm\": norm.flatten()[0],\n",
-    "                    \"bbox\": bbox,\n",
-    "                   #\"magface_embedding\": mag_embedding,\n",
-    "                    #\"magface_norm\": mag_norm,\n",
-    "                    #\"aligned_face\": cv2.cvtColor(bgr_aligned_face, cv2.COLOR_BGR2RGB),\n",
+    "            if self.magface:\n",
+    "                # mag_inputs = {self.ort_mag.get_inputs()[0].name: self._to_input_mag(bgr_aligned_face)}\n",
+    "                mag_embedding = self.ort_mag.run(None, ada_inputs)[0][0]\n",
+    "                mag_norm = np.linalg.norm(mag_embedding)\n",
+    "                face_ret = {\n",
+    "                    **face_ret,\n",
+    "                    **{\"magface_embedding\": mag_embedding, \"magface_norm\": mag_norm},\n",
     "                }\n",
-    "            )\n",
+    "\n",
+    "            ret.append(face_ret)\n",
     "        return ret\n"
    ]
   },
@@ -247,91 +270,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Applied providers: ['CUDAExecutionProvider', 'CPUExecutionProvider'], with options: {'CPUExecutionProvider': {}, 'CUDAExecutionProvider': {'do_copy_in_default_stream': '1', 'arena_extend_strategy': 'kNextPowerOfTwo', 'gpu_external_empty_cache': '0', 'gpu_external_free': '0', 'cudnn_conv_use_max_workspace': '0', 'gpu_mem_limit': '18446744073709551615', 'cudnn_conv_algo_search': 'EXHAUSTIVE', 'gpu_external_alloc': '0', 'device_id': '0'}}\n",
-      "find model: /home/rafael/.insightface/models/sepaelv2/1k3d68.onnx landmark_3d_68 ['None', 3, 192, 192] 0.0 1.0\n",
-      "Applied providers: ['CUDAExecutionProvider', 'CPUExecutionProvider'], with options: {'CPUExecutionProvider': {}, 'CUDAExecutionProvider': {'do_copy_in_default_stream': '1', 'arena_extend_strategy': 'kNextPowerOfTwo', 'gpu_external_empty_cache': '0', 'gpu_external_free': '0', 'cudnn_conv_use_max_workspace': '0', 'gpu_mem_limit': '18446744073709551615', 'cudnn_conv_algo_search': 'EXHAUSTIVE', 'gpu_external_alloc': '0', 'device_id': '0'}}\n",
-      "find model: /home/rafael/.insightface/models/sepaelv2/det_10g.onnx detection [1, 3, '?', '?'] 127.5 128.0\n",
-      "Applied providers: ['CUDAExecutionProvider', 'CPUExecutionProvider'], with options: {'CPUExecutionProvider': {}, 'CUDAExecutionProvider': {'do_copy_in_default_stream': '1', 'arena_extend_strategy': 'kNextPowerOfTwo', 'gpu_external_empty_cache': '0', 'gpu_external_free': '0', 'cudnn_conv_use_max_workspace': '0', 'gpu_mem_limit': '18446744073709551615', 'cudnn_conv_algo_search': 'EXHAUSTIVE', 'gpu_external_alloc': '0', 'device_id': '0'}}\n",
-      "find model: /home/rafael/.insightface/models/sepaelv2/genderage.onnx genderage ['None', 3, 96, 96] 0.0 1.0\n",
-      "set det-size: (320, 320)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ff = ForensicFace(use_gpu=True)\n"
+    "ff = ForensicFace(use_gpu=True, magface=True)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/rafael/mambaforge/envs/onnxgpu/lib/python3.9/site-packages/insightface/utils/transform.py:68: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
-      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
-      "  P = np.linalg.lstsq(X_homo, Y)[0].T # Affine matrix. 3 x 4\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(dict_keys(['keypoints', 'ipd', 'gender', 'age', 'pitch', 'yaw', 'roll', 'embedding', 'norm', 'bbox']),\n",
-       " array([[471.42743, 418.60498],\n",
-       "        [522.68933, 418.05362],\n",
-       "        [498.82196, 449.08923],\n",
-       "        [479.3499 , 476.44193],\n",
-       "        [514.33453, 476.06885]], dtype=float32),\n",
-       " array([441, 355, 548, 506]))"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "results = ff.process_image_multiple_faces(\"tela.png\")\n",
-    "results[0].keys(), results[0][\"keypoints\"], results[0]['bbox']\n"
+    "results[0].keys(), results[0][\"keypoints\"], results[0][\"bbox\"]\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/rafael/mambaforge/envs/onnxgpu/lib/python3.9/site-packages/insightface/utils/transform.py:68: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
-      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
-      "  P = np.linalg.lstsq(X_homo, Y)[0].T # Affine matrix. 3 x 4\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(dict_keys(['keypoints', 'ipd', 'gender', 'age', 'pitch', 'yaw', 'roll', 'embedding', 'norm', 'magface_embedding', 'magface_norm', 'aligned_face']),\n",
-       " array([[103.60017, 139.88235],\n",
-       "        [174.26508, 137.33731],\n",
-       "        [140.28102, 187.14734],\n",
-       "        [109.0942 , 219.34001],\n",
-       "        [173.40771, 217.09573]], dtype=float32))"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "results = ff.process_image_single_face(\"obama.png\")\n",
     "results.keys(), results[\"keypoints\"]\n"
@@ -367,18 +325,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.855624"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ff.compare(\"obama.png\", \"obama2.png\")\n"
    ]
@@ -451,6 +398,10 @@
    "source": [
     "## Suporte a MagFace\n",
     "\n",
+    "Para utilizar, instancie o forensicface com a opção magface = True:\n",
+    "\n",
+    "``ff = forensicface(magface=True)``\n",
+    "\n",
     "Modelo de [MagFace](https://github.com/IrvingMeng/MagFace)"
    ]
   },
@@ -458,19 +409,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(23.233831, 22.589926)"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "ff = ForensicFace(det_size=320, use_gpu=True, magface=True)\n",
     "good = ff.process_image(\"001_frontal.JPG\")\n",
     "bad = ff.process_image(\"001_cam1_1.jpg\")\n",
     "good[\"magface_norm\"], bad[\"magface_norm\"]\n"
