--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -170,7 +170,11 @@
    "source": [
     "## Suporte a MagFace\n",
     "\n",
-    "Estimativa de qualidade pela norma da representação [MagFace](https://github.com/IrvingMeng/MagFace)"
+    "Estimativa de qualidade pela norma da representação [MagFace](https://github.com/IrvingMeng/MagFace)\n",
+    "\n",
+    "Para utilizar, instancie o forensicface com a opção magface = True:\n",
+    "\n",
+    "``ff = ForensicFace(magface=True)``"
    ]
   },
   {
@@ -190,6 +194,7 @@
     }
    ],
    "source": [
+    "ff = ForensicFace(det_size=320, use_gpu=True, magface=True)\n",
     "good = ff.process_image(\"obama.png\")\n",
     "bad = ff.process_image(\"obama2.png\")\n",
     "good[\"magface_norm\"], bad[\"magface_norm\"]"
