--- a/nbs/00_forensicface.ipynb
+++ b/nbs/00_forensicface.ipynb
@@ -128,6 +128,24 @@
     "        # Get index of the face closest to the center of image\n",
     "        idx = dist.index(min(dist))\n",
     "        return idx, faces[idx].kps\n",
+    "    \n",
+    "    def get_larger_face(self, img, faces):\n",
+    "        \"\"\"\n",
+    "        faces is a insightface object with keypoints and bounding_box\n",
+    "\n",
+    "        return: keypoints of the larger face\n",
+    "        \"\"\"\n",
+    "        assert faces is not None\n",
+    "        areas = []\n",
+    "\n",
+    "        # Compute centers of faces and distances from certer of image\n",
+    "        for idx, face in enumerate(faces):\n",
+    "            box = face.bbox.astype(\"int\").flatten()\n",
+    "            areas.append(abs((box[2] - box[0])*(box[3] - box[1])))\n",
+    "\n",
+    "        # Get index of the face closest to the center of image\n",
+    "        idx = areas.index(max(areas))\n",
+    "        return idx, faces[idx].kps\n",
     "\n",
     "    def process_image_single_face(self, imgpath: str):  # Path to image to be processed\n",
     "        \"\"\"\n",
@@ -154,7 +172,7 @@
     "        faces = self.detectmodel.get(bgr_img)\n",
     "        if len(faces) == 0:\n",
     "            return {}\n",
-    "        idx, kps = self.get_most_central_face(bgr_img, faces)\n",
+    "        idx, kps = self.get_larger_face(bgr_img, faces)\n",
     "        gender = \"M\" if faces[idx].gender == 1 else \"F\"\n",
     "        age = faces[idx].age\n",
     "        bbox = faces[idx].bbox.astype(\"int\")\n",
