user can choose which GPU to use

--- a/_proc/00_forensicface.ipynb
+++ b/_proc/00_forensicface.ipynb
@@ -36,9 +36,17 @@
        "### ForensicFace\n",
        "\n",
        ">      ForensicFace (model:str='sepaelv2', det_size:int=320, use_gpu:bool=True,\n",
-       ">                    magface=False)\n",
+       ">                    gpu:int=0, magface=False)\n",
        "\n",
-       "A (forensic) face comparison tool"
+       "A (forensic) face comparison tool\n",
+       "\n",
+       "|    | **Type** | **Default** | **Details** |\n",
+       "| -- | -------- | ----------- | ----------- |\n",
+       "| model | str | sepaelv2 |  |\n",
+       "| det_size | int | 320 |  |\n",
+       "| use_gpu | bool | True |  |\n",
+       "| gpu | int | 0 | which GPU to use |\n",
+       "| magface | bool | False |  |"
       ],
       "text/plain": [
        "---\n",
@@ -48,9 +56,17 @@
        "### ForensicFace\n",
        "\n",
        ">      ForensicFace (model:str='sepaelv2', det_size:int=320, use_gpu:bool=True,\n",
-       ">                    magface=False)\n",
+       ">                    gpu:int=0, magface=False)\n",
        "\n",
-       "A (forensic) face comparison tool"
+       "A (forensic) face comparison tool\n",
+       "\n",
+       "|    | **Type** | **Default** | **Details** |\n",
+       "| -- | -------- | ----------- | ----------- |\n",
+       "| model | str | sepaelv2 |  |\n",
+       "| det_size | int | 320 |  |\n",
+       "| use_gpu | bool | True |  |\n",
+       "| gpu | int | 0 | which GPU to use |\n",
+       "| magface | bool | False |  |"
       ]
      },
      "execution_count": 1,
@@ -117,7 +133,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L262){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L263){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.compare\n",
        "\n",
@@ -126,7 +142,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L262){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L263){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.compare\n",
        "\n",
@@ -173,7 +189,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L274){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L275){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.aggregate_embeddings\n",
        "\n",
@@ -182,7 +198,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L274){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L275){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.aggregate_embeddings\n",
        "\n",
@@ -210,7 +226,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L283){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L284){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.aggregate_from_images\n",
        "\n",
@@ -219,7 +235,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L283){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L284){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ForensicFace.aggregate_from_images\n",
        "\n",
