--- a/nbs/00_forensicface.ipynb
+++ b/nbs/00_forensicface.ipynb
@@ -50,6 +50,7 @@
     "        model: str = \"sepaelv2\",\n",
     "        det_size: int = 320,\n",
     "        use_gpu: bool = True,\n",
+    "        gpu: int = 0, #which GPU to use\n",
     "        magface=False,\n",
     "    ):\n",
     "\n",
@@ -73,7 +74,7 @@
     "            if use_gpu\n",
     "            else [\"CPUExecutionProvider\"],\n",
     "        )\n",
-    "        self.detectmodel.prepare(ctx_id=0 if use_gpu else -1, det_size=self.det_size)\n",
+    "        self.detectmodel.prepare(ctx_id=gpu if use_gpu else -1, det_size=self.det_size)\n",
     "        self.ort_ada = onnxruntime.InferenceSession(\n",
     "            osp.join(\n",
     "                osp.expanduser(\"~/.insightface/models\"),\n",
@@ -81,7 +82,7 @@
     "                \"adaface\",\n",
     "                \"adaface_ir101web12m.onnx\",\n",
     "            ),\n",
-    "            providers=[\"CUDAExecutionProvider\"]\n",
+    "            providers=[('CUDAExecutionProvider', {'device_id': gpu})]\n",
     "            if use_gpu\n",
     "            else [\"CPUExecutionProvider\"],\n",
     "        )\n",
@@ -94,7 +95,7 @@
     "                    \"magface\",\n",
     "                    \"magface_iresnet100.onnx\",\n",
     "                ),\n",
-    "                providers=[\"CUDAExecutionProvider\"]\n",
+    "                providers=[('CUDAExecutionProvider', {'device_id': gpu})]\n",
     "                if use_gpu\n",
     "                else [\"CPUExecutionProvider\"],\n",
     "            )\n",
