user can choose which GPU to use - v2

--- a/nbs/00_forensicface.ipynb
+++ b/nbs/00_forensicface.ipynb
@@ -70,7 +70,7 @@
     "        self.detectmodel = FaceAnalysis(\n",
     "            name=model,\n",
     "            # allowed_modules=[\"detection\",\"landmark_3d_68\",\"genderage\"],\n",
-    "            providers=[\"CUDAExecutionProvider\"]\n",
+    "            providers=[('CUDAExecutionProvider', {'device_id': gpu})]\n",
     "            if use_gpu\n",
     "            else [\"CPUExecutionProvider\"],\n",
     "        )\n",
